프론트엔드 수정

--- a/web/index.html
+++ b/web/index.html
@@ -208,7 +208,7 @@
           <aside class="layout-right">
             <section class="card card-status">
               <div class="status-illustration">
-                <img src="asset/character1.svg" class="character1" />
+                <img src="asset/character1.svg" id="character-img" class="character1" />
                 <div class="bubble-box">
                   지금 쫑알을 준비하고 있어요.<br />
                   잠시만 기다려 주세요!
